Styles contact information
Improves the visual appearance of the contact information
section by adding styling to the email link and icons.

--- a/style.css
+++ b/style.css
@@ -125,3 +125,12 @@ ul {
 	gap: 10px;
 	justify-items: anchor-center;
 }
+
+#contact a {
+	color: rgb(25, 194, 129);
+}
+#contact a span {
+	color: black;
+	font-size: 150%;
+	vertical-align: bottom;
+}
