adjust contact icon size

--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ ul {
 #contact a {
 	color: rgb(25, 194, 129);
 }
-#contact a span {
+#contact span {
 	color: black;
 	font-size: 150%;
 	vertical-align: bottom;
